@@ -2835,6 +2835,9 @@ the result will be a local, non-Tramp, file name."
 	   (tramp-run-real-handler #'expand-file-name (list name)))
 	(unless (tramp-run-real-handler #'file-name-absolute-p (list localname))
 	  (setq localname (concat "~/" localname)))
+        ;; Tilde expansion shall be possible also for quoted localname.
+	(when (string-prefix-p "~" (file-name-unquote localname))
+	  (setq localname (file-name-unquote localname)))
 	;; Tilde expansion if necessary.  This needs a shell which
 	;; groks tilde expansion!  The function `tramp-find-shell' is
 	;; supposed to find such a shell on the remote host.  Please
