@@ -1,3 +1,12 @@
+2023-10-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-handle-expand-file-name):
+	* tramp-gvfs.el (tramp-gvfs-handle-expand-file-name):
+	* tramp-sh.el (tramp-sh-handle-expand-file-name):
+	* tramp-smb.el (tramp-smb-handle-expand-file-name):
+	* tramp-sudoedit.el (tramp-sudoedit-handle-expand-file-name):
+	Handle quoted tilde.  (Bug#65685)
+
 2023-10-11  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-gvfs.el (tramp-gvfs-handle-file-notify-add-watch):
